fix: restore Java 17 compatibility